--- a/class-tasks/session-01/task-01/index.html
+++ b/class-tasks/session-01/task-01/index.html
@@ -18,7 +18,7 @@
         
         <h1>Images</h1> 
         <img src="assets/butterfly.png" /> 
-        <img src="assets/car.png" /> 
+        <img src="assets/cat.png" /> 
         <img src="assets/phone.png" /> 
         <img src="assets/laptop.png" /> 
  
