--- a/quizes/quiz-01/index.html
+++ b/quizes/quiz-01/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title> Task 1 </title>
-    <link rel="stylesheet" type="text/css" href="/quizes/quiz-01/style.css">
-    <script src="/quizes/quiz-01/script.js"></script>
+    <link rel="stylesheet" type="text/css" href="/web-notes/quizes/quiz-01/style.csss">
+    <script src="/web-notes/quizes/quiz-01/style.css"></script>
 
 </head>
 <body>
